# phasmo-pedia

./: README.md
api/: .gitignore  config.py  get_embedding_function.py  get_llm.py  get_vector_db.py  get_vectostore.py  main.py  populate_database.py  pyproject.toml  query_rag.py  requirements.txt
api/data/sitemap/: phasmophobia_wiki.xml
api/rag_app/: get_embedding_function.py  get_llm.py  get_vector_db.py  query_rag.py
client/: .prettierignore  .prettierrc.json  index.html  package-lock.json  package.json
client/src/: App.tsx  PhasmoChat.tsx  theme.ts  types.ts
client/src/components/: ChatMessage.tsx  DeleteChatDialog.tsx  LandingText.tsx  MessageItem.tsx  PhasmoChat.tsx
client/src/hooks/: useChatMutation.tsx
client/src/services/: ChatStorageService.ts  QueryService.ts  RagService.ts
