[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-google-genai>=2.0.11",
    "langchain-openai>=0.3.7",
    "lxml>=5.3.1",
    "requests>=2.32.3",
]
